# retrec

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  allocators.cpp  allocators.h  codegen.cpp  codegen.h  disassembler.cpp  disassembler.h  dynamic_recompiler.cpp  dynamic_recompiler.h  elf_loader.cpp  elf_loader.h  execution_context.cpp  execution_context.h  instruction_stream.h  llir.h  main.cpp  mapped_file.cpp  mapped_file.h  process_memory_map.cpp  process_memory_map.h  util.cpp  util.h  virtual_address_mapper.cpp  virtual_address_mapper.h
src/arch/: arch.h  definitions.h  runtime_context_dispatcher.cpp  runtime_context_dispatcher.h  target_environment.h
src/arch/generic/: codegen_generic.cpp  codegen_generic.h  runtime_context_generic.cpp  runtime_context_generic.h
src/arch/ppc64le/: cpu_context_ppc64le.h  runtime_context_ppc64le.cpp  runtime_context_ppc64le.h  syscalls.cpp  syscalls.h
src/arch/ppc64le/codegen/: abi.h  assembler.cpp  assembler.h  codegen_fixed_helpers.cpp  codegen_ppc64le.cpp  codegen_ppc64le.h  codegen_ppc64le_internal.h  codegen_target_x86_64.cpp  codegen_types.cpp  codegen_types.h  register_allocator.cpp  register_allocator.h  thunks.cpp
src/arch/ppc64le/llir/: llir_registers_ppc64le.h
src/arch/x86_64/: cpu_context_x86_64.h  syscalls.h  target_environment.cpp  target_environment.h
src/arch/x86_64/llir/: llir_lifter_x86_64.cpp  llir_lifter_x86_64.h  llir_operands_x86_64.h  llir_registers_x86_64.h
src/platform/: generic_syscalls.cpp  generic_syscalls.h  syscall_emulation.cpp  syscall_emulation.h  syscall_emulator.cpp  syscall_emulator.h  syscall_types.h
src/util/: magic.h  staticvector.h  util.cpp  util.h
test/: Makefile  addressing_modes.S  addressing_modes.bin.expected  condjump.S  gentest.py  hello.asm  jump.S  jump.asm  jump_sf.S  loadstore.S  loadstore.bin.expected  pushpop.S  runtests.py
test/asm/: .hello_sse.bin.expected  .loadstore.bin.expected  .stos.bin.expected  addressing_modes.S  addressing_modes.bin.expected  callret.S  gentest.py  hello.S  hello_sse.S  jump_zf.S  loadstore.S  loadstore.bin.expected  mov.S  pushpop.bin.expected  stos.S
test/c/: .hello.fs.bin.expected  .print_args.fs.bin.env  .print_args.fs.bin.expected  auxval.fs.c  cpuid.fs.c  hello.fs.c  print_args.fs.c  start.h  syscall.h
